feat: delete jars